update: center title and color

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/app_icon.png
-    - assets/images/
-    - env/dotenv
+    - env/.env
