--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.5
   injectable: ^1.5.3
   intl: ^0.17.0
+  recase: ^4.1.0
 
 dev_dependencies:
   build_runner: ^2.2.1
